After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 698845 - [MM 0.8] capabilities_sequence_ready() AT sequence returns without error and without result
[MM 0.8] capabilities_sequence_ready() AT sequence returns without error and ...
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: ModemManager
unspecified
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-04-25 14:42 UTC by Dan Williams
Modified: 2013-04-25 20:06 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Dan Williams 2013-04-25 14:42:45 UTC
ModemManager[10712]: <debug> [1366900854.040761] [mm-broadband-modem.c:667] modem_load_current_capabilities(): loading current capabilities...
ModemManager[10712]: <debug> [1366900854.040947] [mm-serial-port.c:958] mm_serial_port_open(): (ttyUSB7) device open count is 4 (open)
ModemManager[10712]: <debug> [1366900854.041486] [mm-at-serial-port.c:408] debug_log(): (ttyUSB7): --> 'ATE0<CR>'
ModemManager[10712]: <debug> [1366900854.046608] [mm-at-serial-port.c:408] debug_log(): (ttyUSB7): <-- '<CR><LF>ERROR<CR><LF>'
ModemManager[10712]: <debug> [1366900854.046667] [mm-serial-parsers.c:363] mm_serial_parser_v1_parse(): Got failure code 100: Unknown error
ModemManager[10712]: <debug> [1366900854.046698] [mm-at-serial-port.c:408] debug_log(): (ttyUSB7): --> 'ATV1<CR>'
ModemManager[10712]: <debug> [1366900854.051366] [mm-at-serial-port.c:408] debug_log(): (ttyUSB7): <-- '<CR><LF>ERROR<CR><LF>'
ModemManager[10712]: <debug> [1366900854.051420] [mm-serial-parsers.c:363] mm_serial_parser_v1_parse(): Got failure code 100: Unknown error
ModemManager[10712]: <debug> [1366900854.051462] [mm-at-serial-port.c:408] debug_log(): (ttyUSB7): --> 'AT+CMEE=1<CR>'
ModemManager[10712]: <debug> [1366900854.062260] [mm-at-serial-port.c:408] debug_log(): (ttyUSB7): <-- '<CR><LF>ERROR<CR><LF>'
ModemManager[10712]: <debug> [1366900854.062366] [mm-serial-parsers.c:363] mm_serial_parser_v1_parse(): Got failure code 100: Unknown error
ModemManager[10712]: <debug> [1366900854.062403] [mm-at-serial-port.c:408] debug_log(): (ttyUSB7): --> 'ATX4<CR>'
ModemManager[10712]: <debug> [1366900854.070079] [mm-at-serial-port.c:408] debug_log(): (ttyUSB7): <-- '<CR><LF>ERROR<CR><LF>'
ModemManager[10712]: <debug> [1366900854.070177] [mm-serial-parsers.c:363] mm_serial_parser_v1_parse(): Got failure code 100: Unknown error
ModemManager[10712]: <debug> [1366900854.070217] [mm-at-serial-port.c:408] debug_log(): (ttyUSB7): --> 'AT&C1<CR>'
ModemManager[10712]: <debug> [1366900854.076462] [mm-at-serial-port.c:408] debug_log(): (ttyUSB7): <-- '<CR><LF>ERROR<CR><LF>'
ModemManager[10712]: <debug> [1366900854.076651] [mm-serial-parsers.c:363] mm_serial_parser_v1_parse(): Got failure code 100: Unknown error
ModemManager[10712]: <debug> [1366900854.076726] [mm-at-serial-port.c:408] debug_log(): (ttyUSB7): --> 'ATE0<CR>'
ModemManager[10712]: <debug> [1366900854.081820] [mm-at-serial-port.c:408] debug_log(): (ttyUSB7): <-- '<CR><LF>ERROR<CR><LF>'
ModemManager[10712]: <debug> [1366900854.081938] [mm-serial-parsers.c:363] mm_serial_parser_v1_parse(): Got failure code 100: Unknown error
ModemManager[10712]: <debug> [1366900854.082019] [mm-serial-port.c:1003] mm_serial_port_close(): (ttyUSB7) device open count is 3 (close)
ModemManager[10712]: <debug> [1366900854.082099] [mm-at-serial-port.c:408] debug_log(): (ttyUSB7): --> 'AT+CMEE=1<CR>'
ModemManager[10712]: <debug> [1366900854.093715] [mm-at-serial-port.c:408] debug_log(): (ttyUSB7): <-- '<CR><LF>ERROR<CR><LF>'
ModemManager[10712]: <debug> [1366900854.093911] [mm-serial-parsers.c:363] mm_serial_parser_v1_parse(): Got failure code 100: Unknown error
ModemManager[10712]: <debug> [1366900854.093974] [mm-serial-port.c:1003] mm_serial_port_close(): (ttyUSB7) device open count is 2 (close)
ModemManager[10712]: <debug> [1366900854.094050] [mm-at-serial-port.c:408] debug_log(): (ttyUSB7): --> 'AT+GCAP<CR>'
ModemManager[10712]: <debug> [1366900854.103846] [mm-at-serial-port.c:408] debug_log(): (ttyUSB7): <-- '<CR><LF>ERROR<CR><LF>'
ModemManager[10712]: <debug> [1366900854.104032] [mm-serial-parsers.c:363] mm_serial_parser_v1_parse(): Got failure code 100: Unknown error
ModemManager[10712]: <debug> [1366900854.104134] [mm-at-serial-port.c:408] debug_log(): (ttyUSB7): --> 'ATI<CR>'
ModemManager[10712]: <debug> [1366900854.107911] [mm-at-serial-port.c:408] debug_log(): (ttyUSB7): <-- '<CR><LF>ERROR<CR><LF>'
ModemManager[10712]: <debug> [1366900854.108015] [mm-serial-parsers.c:363] mm_serial_parser_v1_parse(): Got failure code 100: Unknown error
ModemManager[10712]: <debug> [1366900854.108100] [mm-at-serial-port.c:408] debug_log(): (ttyUSB7): --> 'AT+CPIN?<CR>'
ModemManager[10712]: <debug> [1366900854.118467] [mm-at-serial-port.c:408] debug_log(): (ttyUSB7): <-- '<CR><LF>ERROR<CR><LF>'
ModemManager[10712]: <debug> [1366900854.118649] [mm-serial-parsers.c:363] mm_serial_parser_v1_parse(): Got failure code 100: Unknown error
ModemManager[10712]: <debug> [1366900854.118788] [mm-at-serial-port.c:408] debug_log(): (ttyUSB7): --> 'AT+CGMM<CR>'
ModemManager[10712]: <debug> [1366900854.127452] [mm-at-serial-port.c:408] debug_log(): (ttyUSB7): <-- '<CR><LF>ERROR<CR><LF>'
ModemManager[10712]: <debug> [1366900854.127633] [mm-serial-parsers.c:363] mm_serial_parser_v1_parse(): Got failure code 100: Unknown error

Breakpoint 1, g_log (log_domain=log_domain@entry=0x32638eed01 "GLib-GIO", log_level=log_level@entry=G_LOG_LEVEL_CRITICAL, format=format@entry=
    0x32620b789a "%s: assertion `%s' failed") at gmessages.c:999
999	{
(gdb) bt
  • #0 g_log
    at gmessages.c line 999
  • #1 g_return_if_fail_warning
    at gmessages.c line 1012
  • #2 g_simple_async_result_take_error
    at gsimpleasyncresult.c line 676
  • #3 capabilities_sequence_ready
    at mm-broadband-modem.c line 505
  • #4 g_simple_async_result_complete
    at gsimpleasyncresult.c line 775
  • #5 at_sequence_parse_response
    at mm-base-modem-at.c line 249
  • #6 handle_response
    at mm-at-serial-port.c line 168
  • #7 mm_serial_port_got_response
    at mm-serial-port.c line 589
  • #8 data_available
    at mm-serial-port.c line 803
  • #9 g_main_dispatch
    at gmain.c line 2715
  • #10 g_main_context_dispatch
    at gmain.c line 3219
  • #11 g_main_context_iterate
    at gmain.c line 3290
  • #12 g_main_loop_run
    at gmain.c line 3484
  • #13 main
    at main.c line 142

    result = mm_base_modem_at_sequence_finish (self, res, NULL, &error);
    if (!result) {
        g_simple_async_result_take_error (ctx->result, error);
        load_capabilities_context_complete_and_free (ctx);
        return;
    }

Seems like 'error' isn't set here, because the modem replies to everything with error.  Should it just g_simple_async_result_new_error()?
Comment 1 Aleksander Morgado 2013-04-25 15:32:38 UTC
Yeah, just check if error == NULL and if so, use g_simple_async_result_set_error (), and otherwise, take_error();

Which modem is this, btw?
Comment 2 Dan Williams 2013-04-25 20:06:56 UTC
It is the Icera-based Sierra USB305 but without dcbw/icera-fixes applied, which means sometimes MM grabs ttyUSB7 which always replies ERROR to anything you send it.  But since it's detected as an AT port MM might claim it as primary.  Just noticed the assertion and decided to file it separately.

Pushed a fix.